--- a/index.css
+++ b/index.css
@@ -114,6 +114,16 @@ header,
     display: block;
 }
 
+.section-two-image-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1em;
+}
+
+.feature-item {
+    flex: 1 260px;
+}
+
 .feature-image {
     width: 100%;
     border-radius: 4.6px;
@@ -147,16 +157,7 @@ ul {
 /* ----- MEDIA QUERIES ----- */
 
 
-@media (min-width: 480px) {
-    .section-two-image-container {
-        display: flex;
-        justify-content: space-between;
-    }
 
-    .feature-image {
-        width: 48.8%;
-    }
-}
 
 @media (max-width: 767px) {
     header {
